syntax = "proto3";

import "google/protobuf/empty.proto";
package ru.tinkoff.academy.grpc;

option java_package = "ru.tinkoff.academy.proto.bank";
option java_multiple_files = true;

service BankService {
  rpc findAll(google.protobuf.Empty) returns (stream BankResponse);
}

message BankResponse {
  string bank = 1;
}
