syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/rpc/status.proto";
package ru.tinkoff.academy;

option java_package = "ru.tinkoff.academy.proto.field";
option java_multiple_files = true;

service FieldService {
  rpc getAreasStatSplitByEmailAndTelephone(google.protobuf.Empty) returns (AreaStatResponse);
  rpc getAreasStatBySplitValue(AreaStatRequest) returns (AreaStatResponse);
}

message AreaStatResponse {
  repeated AreaStat response = 1;
}

message AreaStat {
  string splitValue = 1;
  double max = 2;
  double average = 3;
  double min = 4;
}

message AreaStatRequest {
  double splitValue = 1;
}
